--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -2,73 +2,35 @@
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 
+<div class="container about">
+	<div class="col-lg-6 col-lg-offset-3">
+		<h3>About me</h3>
+			<h5>Software engineer</h5>
+			<hr>
+			<br>
+			<h4>
+				I make the World a better place with my original coding poetry...
+			<br>-</h4>
+			<p>
+			One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a 
+			<strong>horrible vermin</strong>. 
+			He lay on his <em>armour-like</em> back, and if he lifted his head a little he could see his brown belly, slightly domed 
+			and divided by arches into stiff sections. 
+			The bedding was hardly able to cover it and seemed ready to slide off any moment. 
+			His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. 
+			"What's happened to me?" he thought. It wasn't a dream. His room, a proper human room although a little too small, 
+			lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - 
+			Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated 
+			magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, 
+			raising a heavy fur muff that covered the whole of her lower arm towards the viewer. 
+			Gregor then turned to look out the window at the dull weather. 
+			</p>
+			<p class="text-right"><a href="http://en.wikipedia.org/wiki/The_Metamorphosis" target="_blank">F. Kafka - The metamorphosis</a></p>
+																								</div><!-- /col-lg-6 -->
+																									</div>
+
 <div class="row">
-  <!-- Column 1 -->
-  <div class="col-xs-6">
-    <div class="row">
-      <div class="col-xs-4">
-        <img src="http://th01.deviantart.net/fs71/PRE/i/2012/139/0/8/bmo__adventure_time_fanart_by_chocomax-d50d2ts.png" height="150" width="150" class="img-circle">
-      </div>
-      <div class="col-xs-8">
-        <h1>Short bio</h2>
-      </div>
-    </div>
-    <p>
-      I'm a software engineer. 
-      I offer freelance software engineering and development services, mainly based around the
-      Python programming language.<br>
-      <em>Don't worry. As long as you hit that wire with the connecting hook at precisely 88 miles per hour, the instance the lightning strikes the tower, everything will be fine. Well, I figured, what the hell. C'mon, c'mon let's go. Precisely. Listen, this is very important, I forgot my video camera, could you stop by my place and pick it up on your way to the mall?</em>
-    </p>
-    <div class="row">
-      <div class="well">
-		<h3><a href="archive.html" title="Blog"><span class="label label-warning"><i class="fa fa-rss"></i></span> Blog</a>&nbsp;<small>Tags...</small></h3>
-        <small>
-          {% for post in site.posts limit:5 %}
-            <h4>
-              <a href="{{ post.url }}/" title="{{ post.title }}">{{ post.title }}</a>
-              <small>{{ post.date | date_to_long_string }}</small>
-            </h4>
-	    <div class="row">
-	    {% if post.thumbnail %}
-              <div class="col-xs-2">
-                <img src="{{ post.thumbnail }}" height="75" width="75" class="thumbnail"/>
-              </div>
-	      <div class="col-xs-10">
-	      {% else %}
-                <div class="col-xs-12">
-              {% endif %}
-                {{ post.description }}
-              </div>
-            </div>
-          {% endfor %}
-        </small>
-      </div>
-    </div>
-  </div>
-
-  <!-- Column 2 -->
-  <div class="col-xs-6">
-    <div class="well">
-      <h3><span class="label label-default">Contracting</span>&nbsp;<small>Python, Java, Android</small></h3>
-      <div>
-	      Some text about wishing for positions 
-      </div>
-      <br/>
-    </div>
-    <div class="well">
-      <h3><span class="label label-default">Freelance</span>&nbsp;<small>IAAS, Python, Server-side</small></h3>
-      <div>
-	      I offer freelance Python software engineering services 
-      </div>
-      <br/>
-    </div>
-    <div class="well">
-      <h3><span class="label label-primary">Availability</span>&nbsp;<small>What can I do for you?</small></h3>
-      <div>
-	I'm taking on freelance work for 2014 now though
-        so please get in contact if you need some help.
-      </div>
-    </div>
-  </div>
+	  <div class="col-xs-12">
+	        {{ content }}
+	  </div>
 </div>
-
