Improve page, add bio draft article

--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -2,7 +2,33 @@
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 <div class="row">
-	  <div class="col-xs-12">
-	        {{ content }}
-	  </div>
+	  <div class="col-xs-5 well">
+      <h3>Who am I?</h3>
+      <img style="float: left;margin-right: 15px;margin-top: 20px;" src="http://m.c.lnkd.licdn.com/mpr/pub/image-JOBsDPnNGIdaYbgqVhEzYTnge4MYwfDWo3Xzx-tN-X6YQVUhaOBzx-GU-XfSQun3hhY/aldo-stracquadanio.jpg">
+      <p>
+        <strong>Software engineer</strong>, passionate about math, physics,
+        technology and science in general.
+      </p>
+      <p>
+        I'm a <strong>true polyglot</strong> when it's about coding and I usually
+        don't like spending my time argumenting which language is better as I
+        would rather spend it learning a new one. This doesn't mean that I don't
+        have opinions: I do have <strong>strong opinions</strong> on tools and practices in general
+        and I like discussing about them as this is to me the way forward to improve.
+      </p>
+      <p>
+        With a past characterized by some Java, C# and lots of PHP/Symfony development
+        I recently begun moving toward functional programming with <strong>Scala</strong>
+        and considering the possibility to learn also some Haskell to improve my
+        understanding of the functional word. I also begun hanging out at the
+        London Scala User Group events where I enjoy hacking with some amazing people.
+      </p>
+      <p>
+        I live in London and I spend my time off between good food, parks, books,
+        movies and anything that will attract my (eager) <strong>curiosity</strong>.
+      </p>
+    </div>
+    <div class="col-xs-7">
+      {{ content }}
+    </div>
 </div>
