--- a/_includes/themes/bootstrap/post.html
+++ b/_includes/themes/bootstrap/post.html
@@ -3,42 +3,22 @@
 </div>
 
 <div class="row post-full">
-  <div class="col-md-12">
-    <div class="date">
+  <div class="col-md-10">
+    <p class="date">
       <span>{{ page.date | date_to_long_string }}</span>
-    </div>
+    </p>
     <div class="content">
       {{ content }}
     </div>
 
-    {% unless page.categories == empty %}
-    <br>
-    <h4>Categories</h4>
-      <ul class="tag_box inline">
-	      <!-- <li><i class="icon-folder-open"></i></li> -->
-        {% assign categories_list = page.categories %}
-        {% include JB/categories_list %}
-      </ul>
-    {% endunless %}
-
-    {% unless page.tags == empty %}
-    <h4>Tags</h4>
-      <ul class="tag_box inline">
-	      <!-- <li><i class="icon-tags"></i></li> -->
-        {% assign tags_list = page.tags %}
-        {% include JB/tags_list %}
-      </ul>
-    {% endunless %}
-
     <hr>
-    
+
     <ul class="pagination">
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
         <li class="prev disabled"><a>&larr; Previous</a></li>
       {% endif %}
-        <li><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a></li>
       {% if page.next %}
         <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
       {% else %}
@@ -47,5 +27,25 @@
     </ul>
     <hr>
     {% include JB/comments %}
+  </div>
+  <div class="col-md-2">
+    {% unless page.categories == empty %}
+    <br>
+    <h4>Categories</h4>
+      <ul class="tag_box inline">
+        <!-- <li><i class="icon-folder-open"></i></li> -->
+        {% assign categories_list = page.categories %}
+        {% include JB/categories_list %}
+      </ul>
+    {% endunless %}
+
+    {% unless page.tags == empty %}
+    <h4>Tags</h4>
+      <ul class="tag_box inline">
+        <!-- <li><i class="icon-tags"></i></li> -->
+        {% assign tags_list = page.tags %}
+        {% include JB/tags_list %}
+      </ul>
+    {% endunless %}
   </div>
 </div>
