Introduce icon links

--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -27,6 +27,21 @@
         I live in London and I spend my time off between good food, parks, books,
         movies and anything that will attract my (eager) <strong>curiosity</strong>.
       </p>
+      <p>
+        <strong>More about me</strong>
+      </p>
+      <a class="icon-link" href="https://twitter.com/astr4c">
+        <i class="fa fa-twitter fa-2x"></i>
+      </a>
+      <a class="icon-link" href="http://www.linkedin.com/in/astrac">
+        <i class="fa fa-linkedin fa-2x"></i>
+      </a>
+      <a class="icon-link" href="https://github.com/Astrac">
+        <i class="fa fa-github fa-2x"></i>
+      </a>
+      <a class="icon-link" href="http://stackoverflow.com/users/913053/aldo-stracquadanio">
+        <i class="fa fa-stack-overflow fa-2x"></i>
+      </a>
     </div>
     <div class="col-xs-7">
       {{ content }}
