--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -1,3 +1,16 @@
+.icon-link {
+  color: #333333;
+}
+
+.icon-link:hover {
+  text-decoration: none;
+  color: #4582ec;
+}
+
+.icon-link i {
+  margin-right: 5px;
+}
+
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
