Introduce responsive classes

--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -2,7 +2,7 @@
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 <div class="row">
-	  <div class="col-xs-5 well">
+	  <div class="col-xs-12 col-md-5 well">
       <h3>Who am I?</h3>
       <img style="float: left;margin-right: 15px;margin-top: 20px;" src="http://m.c.lnkd.licdn.com/mpr/pub/image-JOBsDPnNGIdaYbgqVhEzYTnge4MYwfDWo3Xzx-tN-X6YQVUhaOBzx-GU-XfSQun3hhY/aldo-stracquadanio.jpg">
       <p>
@@ -43,7 +43,7 @@
         <i class="fa fa-stack-overflow fa-2x"></i>
       </a>
     </div>
-    <div class="col-xs-7">
+    <div class="col-xs-12 col-md-7">
       {{ content }}
     </div>
 </div>
